Update to dextbr-ui version: icons card themes and colors

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_CHAIN_ID=""
-REACT_APP_NETWORK_URL=""
+REACT_APP_CHAIN_ID="5"
+REACT_APP_NETWORK_URL="https://goerli.infura.io/v3/7bb82959cfb64e29837402af4ecb6d8d"
